[package]
name = "dreambo_servo_wizard"
version = "0.1.1"
edition = "2021"
description = "Console UI for Dynamixel and Feetech servos, powered by rustypot."
license = "Apache-2.0"
repository = "https://github.com/createra-robotics/dreambo_servo_wizard"
homepage = "https://github.com/createra-robotics/dreambo_servo_wizard"
readme = "README.md"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serialport = { version = "4.2", default-features = false }
rustypot = "1.4"
anyhow = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
